Bug 502836 - Password is displayed twice in settings dialog
Summary: Password is displayed twice in settings dialog
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: GIT (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-15 13:36 UTC by Christophe Marin
Modified: 2025-04-16 06:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.04.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2025-04-15 13:36:29 UTC
Easy to reproduce: open an account settings in KMail, click on the icon to reveal the password. 

→ It is displayed twice in the config dialog
Comment 1 Laurent Montel 2025-04-16 06:22:18 UTC
Git commit eeab24f52887bcde406cae32fe0fbbbb1ec3168f by Laurent Montel.
Committed on 16/04/2025 at 06:21.
Pushed by mlaurent into branch 'release/25.04'.

Fix bug Password is displayed twice in settings dialog

FIXED-IN: 25.04.1

M  +4    -4    resources/imap/setupserver.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/eeab24f52887bcde406cae32fe0fbbbb1ec3168f