Fix bug Password is displayed twice in settings dialog

FIXED-IN: 25.04.1
BUG: 502836