resources/imap/setupserver.cpp
@@ -432,13 +432,13 @@ void SetupServer::readSettings()
         connect(readPasswordJob, &ReadPasswordJob::finished, this, [this, readPasswordJob](auto) {
             if (readPasswordJob->error() == Error::NoError) {
                 const auto password = readPasswordJob->textData();
-                m_ui->password->lineEdit()->insert(password);
+                m_ui->password->setPassword(password);
             }
             passwordFetched();
         });
     } else {
         const auto password = m_parentResource->settings()->password();
-        m_ui->password->lineEdit()->insert(password);
+        m_ui->password->setPassword(password);
         passwordFetched();
     }
 }
@@ -491,12 +491,12 @@ void SetupServer::passwordFetched()
         connect(readPasswordJob, &ReadPasswordJob::finished, this, [this, readPasswordJob](auto) {
             if (readPasswordJob->error() == Error::NoError) {
                 const auto password = readPasswordJob->textData();
-                m_ui->customPassword->lineEdit()->insert(password);
+                m_ui->customPassword->setPassword(password);
             }
             sievePasswordFetched();
         });
     } else {
-        m_ui->customPassword->lineEdit()->insert(m_parentResource->settings()->sievePassword());
+        m_ui->customPassword->setPassword(m_parentResource->settings()->sievePassword());
         sievePasswordFetched();
     }
 }
